Added REST interface to AccountManager.